--- a/src/components/landingpage.css
+++ b/src/components/landingpage.css
@@ -58,9 +58,9 @@
 
 .arrow {
     position: absolute;
-    bottom: 0;
+    top: 50vh;
     display: block;
-    left: 50%;
+    left: 20%;
     margin-left: -50px;
     width: 100px;
     z-index: 1;
@@ -84,3 +84,51 @@
   .btn:focus {
     box-shadow: none !important;
   }
+
+  .news{
+    position: absolute;
+    top: 40vh;
+    display: block;
+    left: 20%;
+    margin-left: -50px;
+    width: 100px;
+    z-index: 1;
+    box-sizing: border-box;
+    transition: all 0.5s ease;
+    animation-delay: 0.5s;
+    -webkit-animation-delay: 0.5s;
+}
+.title{
+  position: absolute;
+    top: 20vh;
+    display: block;
+    left: 20%;
+    margin-left: -50px;
+    width: 100px;
+    z-index: 1;
+    box-sizing: border-box;
+    transition: all 0.5s ease;
+    animation-delay: 0.5s;
+    -webkit-animation-delay: 0.5s;
+}
+.menu{
+  background-color: #337ab7;
+  border-radius: 5px;
+  color:#FFF;
+  position: absolute;
+  top: 20vh;
+  display: block;
+  left: 70%;
+  width: 200px;
+  z-index: 1;
+  box-sizing: border-box;
+  transition: all 0.5s ease;
+  animation-delay: 0.5s;
+  -webkit-animation-delay: 0.5s;
+}
+
+@media(max-width: 990px){
+  .menu{
+    display: none !important
+  }
+}
