--- a/src/components/landingpage.css
+++ b/src/components/landingpage.css
@@ -112,8 +112,8 @@
     -webkit-animation-delay: 0.5s;
 }
 .menu{
-  background-color: #337ab7;
-  border-radius: 5px;
+  background-color: #2f679778;
+  border-radius: 10px;
   color:#FFF;
   position: absolute;
   top: 20vh;
