upload data footer ongoing

--- a/src/components/gps_timetable.css
+++ b/src/components/gps_timetable.css
@@ -1,5 +1,5 @@
 .gps {
-    background-image: url("../images/FooterBG.jpg");
+    background-color:#12436A; 
     background-position:center;
 }
 .row{
