--- a/src/components/guesscard.css
+++ b/src/components/guesscard.css
@@ -6,6 +6,7 @@
     color:#fff !important;
     margin: 20px;
     padding: 10px 40px;
+    text-align: center;
 }
 .card{
     position: relative;
@@ -17,4 +18,14 @@
     display: block;
     width: 100%;
     height: auto;
+  }
+  .text-center{
+    color: #fff;
+  }
+  .keyWords{
+    color: #fff;
+  }
+  .contents{
+    font-size: 16px;
+    margin: 0;
   }
