--- a/src/components/gps_timetable.css
+++ b/src/components/gps_timetable.css
@@ -2,6 +2,44 @@
     background-color:#12436A; 
     background-position:center;
 }
-.row{
+.GPSnTime{
+    display: flex;
+    flex-wrap: wrap;
     height: 80vh;
+    justify-content: center;
+    padding: 0 50px;
 }
+.GPSBlock{
+    width: 50%;
+    height: 100%;
+    padding: 0 20px;
+}
+.timeTableBlock{
+    width: 50%;
+    height: 100%;
+    padding: 0 20px;
+}
+.timeTable{
+
+}
+
+@media (max-width: 768px) {
+    .GPSnTime{
+        display: flex;
+        flex-flow: column;
+        height: 80vh;
+        justify-content: center;
+        padding: 0 20px;
+    }
+    .GPSBlock{
+        width: 100%;
+        height: 60%;
+
+    }
+    .timeTableBlock{
+        width: 100%;
+
+
+    }
+
+  }
