--- a/src/components/oceanwiki.css
+++ b/src/components/oceanwiki.css
@@ -59,6 +59,12 @@
     font-size: 16px;
     margin: 0;
 }
+.modalText{
+    text-align: center;
+    color: #fff;
+    width: 80vw;
+    margin: 20px auto;
+}
 
 @media (max-width: 768px) {
     .phone{
